--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # org.gradle.java.home=/usr/lib/jvm/java-17-openjdk
+org.gradle.daemon=true
+org.gradle.daemon.idletimeout=1
