--- a/.github/workflows/Derleyici.yml
+++ b/.github/workflows/Derleyici.yml
@@ -46,12 +46,12 @@ jobs:
 
       - name: Eklentileri Derle
         run: |
-          cd $GITHUB_WORKSPACE/src
-          chmod +x gradlew
-          ./gradlew make makePluginsJson
-          cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
-          cp build/plugins.json $GITHUB_WORKSPACE/builds
-
+           cd $GITHUB_WORKSPACE/src
+           chmod +x gradlew
+           ./gradlew make makePluginsJson --stacktrace --info
+           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
+           cp build/plugins.json $GITHUB_WORKSPACE/builds
+           
       - name: Derlemeleri Yükle
         run: |
           cd $GITHUB_WORKSPACE/builds
