--- a/.github/workflows/Kontrol.yml
+++ b/.github/workflows/Kontrol.yml
@@ -7,7 +7,8 @@ concurrency:
 on:
   workflow_dispatch:
   schedule:
-    - cron: 11 */9 * * *
+    - cron: '0 */4 * * *'
+
 
 jobs:
   DomainKontrol:
