--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-*.iml
-.gradle
-/local.properties
-/.idea
-.DS_Store
-/build
-**/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
-.vscode
+*
+!build/
+!build/**/
+build/*
+!build/**/*.cs3
