--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-# Bu araç @keyiflerolsun tarafından | @KekikAkademi için yazılmıştır.
-
-github          : keyiflerolsun
-buy_me_a_coffee : keyiflerolsun
-custom          : ["https://keyiflerolsun.me/Kahve"]
+github          : kraptor123
+buy_me_a_coffee : kraptor123
+custom          : daha eklenmedi
