--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github          : kraptor123
 buy_me_a_coffee : kraptor123
-custom          : daha eklenmedi
+custom          : ["https://keyiflerolsun.me/kraptor123"]
