--- a/.github/workflows/close-invalid-issue.yml
+++ b/.github/workflows/close-invalid-issue.yml
@@ -1,14 +1,14 @@
-name: Hatalı İssue Kapatma
+name: Close and Clean Invalid Issues
 
 on:
   issues:
     types: [opened, edited]
 
 jobs:
-  close_invalid:
+  clean_and_close_invalid:
     runs-on: ubuntu-latest
     steps:
-      - name: Check for required issue template keywords
+      - name: Clean and close invalid issue
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -23,6 +23,13 @@ jobs:
             const issueBody = context.payload.issue.body || "";
             const isValid = requiredKeywords.every(keyword => issueBody.includes(keyword));
             if (!isValid) {
+              // Issue içeriğini sıfırla ve mesaj ekle
+              await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.issue.number,
+                body: "Düzgün bir issue değil."
+              });
               // Issue'yu kapat
               await github.rest.issues.update({
                 owner: context.repo.owner,
